<resources>
    <string name="app_name">Psyche</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_logout_description">Oh no! You\'re leaving...</string>
    <string name="label_are_you_sure">Are you sure?</string>
    <string name="label_cancel_button_title">Naah, Just Kidding</string>
    <string name="label_logout_button_title">Yes, Log Me Out</string>
    <string name="label_sign_in_with_email_button_title">SIGN IN USING YOUR EMAIL</string>
    <string name="label_signup_button_title">Sign up</string>
    <string name="label_signin_button_title">Sign in</string>
    <string name="label_question_title">Question</string>
    <string name="label_question_description">Wait, QUESTION is getting Loaded...</string>

    <!--    Score Result messages-->
    <string name="label_internet_addiction_good_score_description">Good News! Your Score is in the safe zone.
        You are great at monitoring the amount of time you spend online</string>
    <string name="label_internet_addiction_bad_score_description">Alert! Your Score suggests you are
        addicted to the internet. Start with limiting and monitoring your internet usage</string>
    <string name="label_time_management_good_score_description">Good News! Your Score is in the safe
        zone. Your are great at managing your time</string>
    <string name="label_time_management_average_score_description">Caution! You are doing okay but
        you need to focus on improving your time management</string>
    <string name="label_time_management_bad_score_description">Alert! Poor time management is a
        likely reason behind your mental health issues</string>
    <string name="label_anxiety_good_score_description">Good News! Your Score is in the safe zone.</string>
    <string name="label_anxiety_average_score_description">Caution! You are doing okay but it will
        be better to keep your stress and anxiety levels in check</string>
    <string name="label_anxiety_bad_score_description">Alert! High Anxiety levels is likely reason
        behind your stress</string>
    <string name="label_check_previous_scores">Check Previous Scores</string>
    <string name="label_facing_problem">Facing problem?</string>
    <string name="label_forgot_password">Forgot Password?</string>
    <string name="label_log_in_title">Log in</string>
    <string name="label_popup_dialog_title">Your Email</string>
    <string name="label_ok">OK</string>
    <string name="label_profile_popup_dialog">Profile_Popup</string>
    <string name="label_joke_popup_dialog">Joke_Popup</string>
    <string name="label_exercises_note">Note: More Exercises will be added soon</string>
    <string name="label_activities_title">Activities</string>
    <string name="label_meditation_completed_message">One minute meditation is successfully completed</string>
    <string name="label_start_again_button_title">START AGAIN</string>
    <string name="label_menu">MENU</string>
    <string name="label_no_internet">No internet available</string>
    <string name="label_refresh_button">Refresh</string>
    <string name="label_bottom_sheet_tag">add_menu_bottom_sheet_fragment</string>
    <string name="label_scale_title">Scale</string>
    <string name="label_profile_title">Profile</string>
    <string name="label_about_us_title">About us</string>
    <string name="label_sign_out">Sign out</string>
    <string name="label_covid_menu_title">Covid-19 Stats</string>
    <string name="label_world_covid_button_title">Check out World covid-19 stats</string>
    <string name="label_button_india_covid">Check out India Covid-19 Stats</string>
    <string name="label_meditation_title">Meditation</string>
    <string name="label_exercises_title">Exercises</string>
    <string name="label_joke_title">Joke It</string>
    <string name="label_copy_joke">Copy</string>
    <string name="label_share_button">Share</string>
    <string name="label_random_joke">Random Joke</string>
    <string name="label_error_message">There is some problem</string>
    <string name="label_select_answer_error_message">Please select an answer</string>


</resources>
