<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="@dimen/margin_sixteen_dp"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:id="@+id/tvJokePopupTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_popup_dialog_title"
            android:textAllCaps="true"
            android:textSize="@dimen/text_twenty_eight_sp"
            android:fontFamily="@font/mbold"
            android:textColor="@color/textColor"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            />

        <ImageView
            android:id="@+id/ivJokeClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close"
            android:layout_margin="@dimen/padding_eight_dp"
            android:layout_gravity="end"
            android:layout_alignParentEnd="true"
            android:layout_alignBottom="@id/tvJokePopupTitle"
            android:layout_alignTop="@id/tvJokePopupTitle"
            />

    </RelativeLayout>



    <TextView
        android:id="@+id/tvJokeSetup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Joke Setup"
        android:layout_marginTop="@dimen/margin_twenty_four_dp"
        android:textSize="@dimen/text_sixteen_sp"
        android:fontFamily="@font/mregular"
        android:textColor="@color/textColor"
        android:drawablePadding="@dimen/padding_eight_dp"
        />

    <TextView
        android:id="@+id/tvJokeDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Joke Desc"
        android:layout_marginTop="@dimen/margin_twenty_four_dp"
        android:textSize="@dimen/text_sixteen_sp"
        android:fontFamily="@font/mregular"
        android:textColor="@color/textColor"
        android:drawablePadding="@dimen/padding_eight_dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal"
        android:layout_marginEnd="@dimen/padding_four_dp"
        android:layout_marginTop="@dimen/margin_twelve_dp"
        >

        <Button
            android:id="@+id/btnCopyJoke"
            style="@style/CustomNormalTextButton"
            android:text="@string/label_copy_joke"
            android:textColor="@color/colorPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <Button
            android:id="@+id/btnShareJoke"
            style="@style/CustomNormalTextButton"
            android:text="@string/label_share_button"
            android:textColor="@color/colorPrimary"
            android:layout_marginStart="@dimen/padding_eight_dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>



</LinearLayout>