<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ExercisesActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarExercises"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_app_theme_accent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/label_activities_title"
        app:titleTextAppearance="@style/mBoldAppearnace"
        app:titleTextColor="@color/color_toolbar_title" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glHorizontalUpper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin_twelve_dp"
        style="@style/CustomFilledCardStyle"
        app:layout_constraintBottom_toBottomOf="@id/glHorizontalUpper"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarExercises"
        >

        <LinearLayout
            android:id="@+id/llMeditation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            style="@style/CustomFilledCardStyle"
            android:paddingStart="@dimen/margin_twenty_dp"
            android:paddingLeft="@dimen/margin_twenty_dp"
            android:paddingTop="@dimen/padding_four_dp"
            android:paddingEnd="@dimen/margin_twenty_dp"
            android:paddingRight="@dimen/margin_twenty_dp"
            android:paddingBottom="@dimen/padding_four_dp"
            >

            <ImageView
                android:id="@+id/ivMeditationIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_meditation" />

            <TextView
                android:id="@+id/tvMeditationTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_eight_dp"
                android:fontFamily="@font/mbold"
                android:text="@string/label_meditation_title"
                android:textColor="@color/color_white" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>




    <TextView
        android:id="@+id/tvNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_exercises_note"
        android:fontFamily="@font/mregular"
        android:textSize="@dimen/text_twelve_sp"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/btnGetNameAge"
        android:layout_margin="@dimen/margin_twenty_four_dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="Enter Name"
        />

    <Button
        android:id="@+id/btnGetNameAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Get Name Age"
        app:layout_constraintBottom_toTopOf="@id/tvNote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/glHorizontalMiddle" />

</androidx.constraintlayout.widget.ConstraintLayout>