<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clExercise"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.activities.ActivitiesHomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbarSize="@dimen/padding_eight_dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvExercisesTitle"
                style="@style/BoldTextStyleBlackColor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_sixteen_dp"
                android:text="@string/label_exercises_title"
                android:textAllCaps="true"
                android:textSize="@dimen/text_twenty_four_sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.card.MaterialCardView
                style="@style/CustomFilledCardStyle"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/exercise_card_height"
                android:layout_margin="@dimen/margin_twelve_dp"
                app:layout_constraintBottom_toBottomOf="@id/glHorizontalUpper"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvExercisesTitle">

                <LinearLayout
                    android:id="@+id/llMeditation"
                    style="@style/CustomFilledCardStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/margin_twenty_dp"
                    android:paddingLeft="@dimen/margin_twenty_dp"
                    android:paddingTop="@dimen/padding_four_dp"
                    android:paddingEnd="@dimen/margin_twenty_dp"
                    android:paddingRight="@dimen/margin_twenty_dp"
                    android:paddingBottom="@dimen/padding_four_dp">

                    <ImageView
                        android:id="@+id/ivMeditationIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_meditation" />

                    <TextView
                        android:id="@+id/tvMeditationTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/padding_eight_dp"
                        android:fontFamily="@font/mbold"
                        android:text="@string/label_meditation_title"
                        android:textColor="@color/color_white" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/glHorizontalUpper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.4" />

            <TextView
                android:id="@+id/tvJokeTitle"
                style="@style/BoldTextStyleBlackColor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_sixteen_dp"
                android:text="@string/label_joke_title"
                android:textAllCaps="true"
                android:textSize="@dimen/text_twenty_four_sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/glHorizontalUpper" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btnRandomJoke"
                style="@style/CustomFilledCardStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_sixteen_dp"
                app:layout_constraintStart_toStartOf="@id/tvJokeTitle"
                app:layout_constraintTop_toBottomOf="@id/tvJokeTitle">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="@dimen/margin_twenty_four_dp">

                    <TextView
                        style="@style/BoldTextStyleWhite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Get Random Joke"
                        android:textSize="@dimen/text_twenty_four_sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_sixteen_dp"
                        android:src="@drawable/ic_random_icon" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
